--- a/Challenge04LGBB/View/Base.lproj/Main.storyboard
+++ b/Challenge04LGBB/View/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -47,7 +48,7 @@
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vMc-XE-WMT">
                                 <rect key="frame" x="60" y="218" width="294" height="70"/>
@@ -61,7 +62,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="imagePlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="RSD-7v-EP0">
                                 <rect key="frame" x="92" y="326" width="230" height="230"/>
@@ -99,7 +100,7 @@
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="rJl-mD-UKU"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="BackGround"/>
                         <gestureRecognizers/>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="dVj-Xt-zXI" appends="YES" id="fgf-if-Jr7"/>
@@ -131,6 +132,7 @@
                         <outlet property="labelImagem" destination="tnG-RT-wwe" id="CNY-7J-Ayb"/>
                         <outlet property="labelIntrucao" destination="4mZ-YQ-6Ll" id="kBf-cZ-4bV"/>
                         <outlet property="labelTurno" destination="0aA-Ej-i2r" id="cGT-M3-tUf"/>
+                        <outlet property="sigaAsInstrucoes" destination="tnG-RT-wwe" id="jkD-nN-yGM"/>
                         <outlet property="statusbar" destination="vAU-Bi-V7b" id="D8C-7H-NY1"/>
                         <outlet property="viewTurno" destination="vMc-XE-WMT" id="tfM-cG-f4g"/>
                     </connections>
@@ -155,6 +157,9 @@
         <image name="Dica" width="32" height="32"/>
         <image name="imagePlaceholder" width="1170" height="780"/>
         <image name="questionmark.circle" catalog="system" width="128" height="121"/>
+        <namedColor name="BackGround">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
