feat: finish func of going back to other screen

--- a/Challenge04LGBB/View/Base.lproj/Main.storyboard
+++ b/Challenge04LGBB/View/Base.lproj/Main.storyboard
@@ -20,6 +20,16 @@
         </array>
     </customFonts>
     <scenes>
+        <!--ChooseRecipe-->
+        <scene sceneID="Y1M-tI-m5P">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ChooseRecipe" id="GtA-fk-Q8M" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="K0P-EH-wGh"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YF2-9o-Z3Y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3080" y="86"/>
+        </scene>
         <!--Recipe View Controller-->
         <scene sceneID="bzl-U3-bYt">
             <objects>
@@ -38,6 +48,9 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="69" height="46"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="Back"/>
+                                                <connections>
+                                                    <segue destination="GtA-fk-Q8M" kind="presentation" modalPresentationStyle="fullScreen" id="PCa-GP-BTh"/>
+                                                </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Etapa 1 de 3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uYZ-ye-9fs">
                                                 <rect key="frame" x="134" y="0.0" width="146" height="46"/>
